5.	“保存路径”、“选择料号”，--能记忆住上次的设置 OK

--- a/cameraLogger.ini
+++ b/cameraLogger.ini
@@ -22,5 +22,6 @@ portname=COM3
 baudrate=9600
 
 [system]
-currentParameterFilePath=cailiao2Logger.ini
+currentParameterFilePath=cameraLogger.ini
 currentMaterialName=bupi1
+currentOutputFilePath=H:\
