1. add workStationGroup & WorkStation class represent WorkStation 2. support multi workstation instead of pipeLine concept.

--- a/cameraLogger.ini
+++ b/cameraLogger.ini
@@ -1,5 +1,5 @@
 [camera]
-ccdnum=12
+ccdnum=6
 ccd1=chicun1
 ccd2=chicun2,chicun3
 ccd3=chicun4,chicun5,chicun6
@@ -13,15 +13,22 @@ ccd10=chicun14
 ccd11=chicun15,chicun16
 ccd12=chicun17,chicun18,chicun19
 
+workstations=5
+station1=ccd1,ccd2
+station2=ccd3
+station3=ccd4
+station4=ccd5
+station5=ccd6
+
 [socket]
 ip=127.0.0.1
 port=1231
 
 [com]
-portname=COM3
+portname=COM1
 baudrate=9600
 
 [system]
 currentParameterFilePath=cameraLogger.ini
 currentMaterialName=bupi1
-currentOutputFilePath=H:\
+currentOutputFilePath=H:\Repository\gitLocalRepository\ibd\IntelligentIndustry\IntelligentCameraRecorder\IntelligentCameraRecorder\bin\Debug
