--- a/IntelligentCameraRecorder/IntelligentCameraRecorder.csproj
+++ b/IntelligentCameraRecorder/IntelligentCameraRecorder.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
+    <Compile Include="WorkSationGroup.cs" />
+    <Compile Include="WorkStation.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
